--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
       <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <h1>ES6 prototyping boilerplate</h1>
-
-    <script src="./bundle.js"></script>
+    <script>
+      require('./renderer');
+    </script>
   </body>
 </html>
